<resources>
    <string name="app_name">Social Network</string>
    <string name="settings">Settings</string>
    <string name="full_name" translatable="false">%1$s %2$s</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_avatar">Profile avatar</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="go_to_settings_and_fill_out_the_profile">Go to settings and fill out the profile</string>
    <string name="lets_get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="or">Or</string>
    <string name="by_clicking_register_you_agree_to_our_terms_and_conditions">By clicking Register you agree to our Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="google" translatable="false">GOOGLE</string>
    <string name="empty_error">Field cannot be empty</string>
    <string name="short_password_error">Password must be longer than 8 characters</string>
    <string name="space_in_password_error">Password cannot contain spaces</string>
    <string name="only_lowercase_error">Password must contain at least one uppercase letter</string>
    <string name="only_uppercase_error">Password must contain at least one lowercase letter</string>
    <string name="digit_lack_error">Password must contain at least one digit</string>
    <string name="incorrect_email">Incorrect e-mail</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save">SAVE</string>
    <string name="contact_removed">Contact has been removed</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="log_out">Log out</string>
    <string name="hello">Hello!</string>
    <string name="enter_your_email_and_password_below">Enter your email and password below</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="cancel">Cancel</string>
    <string name="forward">Forward</string>
    <string name="user_name">User name</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="your_profile_data">Your profile data</string>
    <string name="sign_up">Sign up</string>

</resources>