<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/headerGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_add_contact_headerGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_all_l" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_all_l" />

    <View
        android:id="@+id/headerBg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/headerGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/headerBg"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toTopOf="@id/headerBg"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_family"
        android:text="@string/add_contact"
        android:textColor="@color/white_text"
        android:textSize="@dimen/font_all_size_xl"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/headerGuideline"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toTopOf="@id/headerBg" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_all_xxxl"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="@id/headerBg"
        app:layout_constraintStart_toStartOf="@id/headerBg"
        app:layout_constraintTop_toBottomOf="@id/headerBg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerScrollLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/innerStartGuideLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_all_l" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/innerEndGuideLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_all_l" />

            <View
                android:id="@+id/avatarBgView"
                android:layout_width="0dp"
                android:layout_height="155dp"
                android:background="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="@id/innerScrollLayout"
                app:layout_constraintStart_toStartOf="@id/innerScrollLayout"
                app:layout_constraintTop_toTopOf="@id/innerScrollLayout" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatar"
                android:layout_width="113dp"
                android:layout_height="113dp"
                android:layout_marginTop="@dimen/margin_add_contact_avatar"
                android:background="@drawable/ic_contact_avatar"
                android:contentDescription="@string/profile_avatar"
                android:foreground="@drawable/imgv_fg_founded"
                app:layout_constraintEnd_toStartOf="@id/innerEndGuideLine"
                app:layout_constraintStart_toEndOf="@id/innerStartGuideLine"
                app:layout_constraintTop_toTopOf="@+id/innerScrollLayout" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/addAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all_xl"
                android:contentDescription="@string/profile_avatar"
                android:src="@drawable/ic_add_avatar"
                app:layout_constraintBottom_toBottomOf="@id/avatar"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="@+id/avatar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_all_size_xxl"
                app:layout_constraintEnd_toStartOf="@id/innerEndGuideLine"
                app:layout_constraintStart_toEndOf="@id/innerStartGuideLine"
                app:layout_constraintTop_toBottomOf="@id/avatarBgView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameTextInput"
                    style="@style/TextInputLayout_editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,TouchTargetSizeCheck"
                    tools:text="Billy Herington" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/careerInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_all_size_xxl"
                app:layout_constraintEnd_toStartOf="@id/innerEndGuideLine"
                app:layout_constraintStart_toEndOf="@id/innerStartGuideLine"
                app:layout_constraintTop_toBottomOf="@id/usernameInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/careerTextInput"
                    style="@style/TextInputLayout_editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/career"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,TouchTargetSizeCheck"
                    tools:text="Billy Herington" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_all_size_xxl"
                app:layout_constraintEnd_toStartOf="@id/innerEndGuideLine"
                app:layout_constraintStart_toEndOf="@id/innerStartGuideLine"
                app:layout_constraintTop_toBottomOf="@id/careerInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInput"
                    style="@style/TextInputLayout_editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,TouchTargetSizeCheck"
                    tools:text="Billy Herington" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_all_size_xxl"
                app:layout_constraintEnd_toStartOf="@id/innerEndGuideLine"
                app:layout_constraintStart_toEndOf="@id/innerStartGuideLine"
                app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneTextInput"
                    style="@style/TextInputLayout_editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TouchTargetSizeCheck"
                    tools:text="Billy Herington" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_all_size_xxl"
                app:layout_constraintEnd_toStartOf="@id/innerEndGuideLine"
                app:layout_constraintStart_toEndOf="@id/innerStartGuideLine"
                app:layout_constraintTop_toBottomOf="@id/phoneInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressTextLayout"
                    style="@style/TextInputLayout_editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry"
                    tools:text="Billy Herington" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateOfBirthInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_all_size_xxl"
                app:layout_constraintEnd_toStartOf="@id/innerEndGuideLine"
                app:layout_constraintStart_toEndOf="@id/innerStartGuideLine"
                app:layout_constraintTop_toBottomOf="@id/addressInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateOfBirthTextInput"
                    style="@style/TextInputLayout_editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:imeOptions="actionDone"
                    android:inputType="date"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry"
                    tools:text="Billy Herington" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/margin_all_l"
        android:background="@drawable/btn_bg_rounded"
        android:clickable="true"
        android:text="@string/save"
        android:textColor="@color/white_text"
        android:textSize="@dimen/font_all_size_xxl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine"
        app:layout_constraintStart_toStartOf="@id/startGuideLine" />

</androidx.constraintlayout.widget.ConstraintLayout>